--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <main>
             <section class="hero">
                 <h1>Добро пожаловать в Chupep</h1>
-                <p>Ваше пространство для общения и творчества chuuuuuuuuuuupeeeeeeeeep</p>
+                <p>Ваше пространство для общения и творчsdffsfsdfества chuuuuuuuuuuuasdasdpeeeeeeeeep</p>
                 <button class="cta-button">Присоединиться</button>
             </section>
             
