--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="logo.png" alt="Chupep Logo" class="logo">
         <h1>Добро пожаловать в Chupep</h1>
         <div class="buttons">
-            <a href="/register" class="btn btn-primary">Зарегистрироваться</a>
+            <a href="/register" class="btn btn-primary">Зарегистрироваться123123</a>
             <a href="/login" class="btn btn-secondary">Войти</a>
         </div>
     </div>
