--- a/index.html
+++ b/index.html
@@ -11,8 +11,22 @@
         <img src="logo.png" alt="Chupep Logo" class="logo">
         <h1>Добро пожаловать в Chupep</h1>
         <div class="buttons">
-            <a href="/register" class="btn btn-primary">Зарегистрироваться123123</a>
-            <a href="/login" class="btn btn-secondary">Войти</a>
+            <div class="dropdown">
+                <a href="#" class="btn btn-primary">Зарегистрироваться</a>
+                <div class="dropdown-content">
+                    <a href="/register/student">Как студент</a>
+                    <a href="/register/teacher">Как преподаватель</a>
+                    <a href="/register/company">Как компания</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a href="#" class="btn btn-secondary">Войти</a>
+                <div class="dropdown-content">
+                    <a href="/login/student">Как студент</a>
+                    <a href="/login/teacher">Как преподаватель</a>
+                    <a href="/login/company">Как компания</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
