--- a/index.html
+++ b/index.html
@@ -11,23 +11,83 @@
         <img src="logo.png" alt="Chupep Logo" class="logo">
         <h1>Добро пожаловать в Chupep</h1>
         <div class="buttons">
-            <div class="dropdown">
-                <a href="#" class="btn btn-primary">Зарегистрироваться</a>
-                <div class="dropdown-content">
-                    <a href="/register/student">Как студент</a>
-                    <a href="/register/teacher">Как преподаватель</a>
-                    <a href="/register/company">Как компания</a>
-                </div>
-            </div>
-            <div class="dropdown">
-                <a href="#" class="btn btn-secondary">Войти</a>
-                <div class="dropdown-content">
-                    <a href="/login/student">Как студент</a>
-                    <a href="/login/teacher">Как преподаватель</a>
-                    <a href="/login/company">Как компания</a>
-                </div>
-            </div>
+            <button onclick="openModal('registerModal')" class="btn btn-primary">Зарегистрироваться</button>
+            <button onclick="openModal('loginModal')" class="btn btn-secondary">Войти</button>
         </div>
     </div>
+
+    <!-- Модальное окно регистрации -->
+    <div id="registerModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('registerModal')">&times;</span>
+            <h2>Регистрация</h2>
+            <form id="registerForm">
+                <div class="form-group">
+                    <label for="regEmail">Email</label>
+                    <input type="email" id="regEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="regPassword">Пароль</label>
+                    <input type="password" id="regPassword" required>
+                </div>
+                <div class="form-group">
+                    <label for="regConfirmPassword">Подтвердите пароль</label>
+                    <input type="password" id="regConfirmPassword" required>
+                </div>
+                <button type="submit" class="form-submit">Зарегистрироваться</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Модальное окно входа -->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('loginModal')">&times;</span>
+            <h2>Вход</h2>
+            <form id="loginForm">
+                <div class="form-group">
+                    <label for="loginEmail">Email</label>
+                    <input type="email" id="loginEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="loginPassword">Пароль</label>
+                    <input type="password" id="loginPassword" required>
+                </div>
+                <button type="submit" class="form-submit">Войти</button>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        function openModal(modalId) {
+            document.getElementById(modalId).style.display = 'flex';
+        }
+
+        function closeModal(modalId) {
+            document.getElementById(modalId).style.display = 'none';
+        }
+
+        // Закрытие модального окна при клике вне его
+        window.onclick = function(event) {
+            if (event.target.className === 'modal') {
+                event.target.style.display = 'none';
+            }
+        }
+
+        // Обработка форм
+        document.getElementById('registerForm').onsubmit = function(e) {
+            e.preventDefault();
+            // Здесь будет код для обработки регистрации
+            alert('Регистрация успешна!');
+            closeModal('registerModal');
+        }
+
+        document.getElementById('loginForm').onsubmit = function(e) {
+            e.preventDefault();
+            // Здесь будет код для обработки входа
+            alert('Вход выполнен!');
+            closeModal('loginModal');
+        }
+    </script>
 </body>
 </html> 
