--- a/index.html
+++ b/index.html
@@ -7,86 +7,69 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <img src="logo.png" alt="Chupep Logo" class="logo">
-        <h1>Добро пожаловать в Chupep</h1>
-        <div class="buttons">
-            <button onclick="openModal('registerModal')" class="btn btn-primary">Зарегистрироваться</button>
-            <button onclick="openModal('loginModal')" class="btn btn-secondary">Войти</button>
+    <header>
+        <div class="header-content">
+            <img src="logo.png" alt="Chupep Logo" class="logo">
+            <div class="nav-buttons">
+                <div class="dropdown">
+                    <button class="btn btn-primary">Зарегистрироваться</button>
+                    <div class="dropdown-content">
+                        <form id="registerForm">
+                            <div class="form-group">
+                                <label for="regEmail">Email</label>
+                                <input type="email" id="regEmail" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="regPassword">Пароль</label>
+                                <input type="password" id="regPassword" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="regConfirmPassword">Подтвердите пароль</label>
+                                <input type="password" id="regConfirmPassword" required>
+                            </div>
+                            <button type="submit" class="form-submit">Зарегистрироваться</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="btn btn-secondary">Войти</button>
+                    <div class="dropdown-content">
+                        <form id="loginForm">
+                            <div class="form-group">
+                                <label for="loginEmail">Email</label>
+                                <input type="email" id="loginEmail" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="loginPassword">Пароль</label>
+                                <input type="password" id="loginPassword" required>
+                            </div>
+                            <button type="submit" class="form-submit">Войти</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+    </header>
 
-    <!-- Модальное окно регистрации -->
-    <div id="registerModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('registerModal')">&times;</span>
-            <h2>Регистрация</h2>
-            <form id="registerForm">
-                <div class="form-group">
-                    <label for="regEmail">Email</label>
-                    <input type="email" id="regEmail" required>
-                </div>
-                <div class="form-group">
-                    <label for="regPassword">Пароль</label>
-                    <input type="password" id="regPassword" required>
-                </div>
-                <div class="form-group">
-                    <label for="regConfirmPassword">Подтвердите пароль</label>
-                    <input type="password" id="regConfirmPassword" required>
-                </div>
-                <button type="submit" class="form-submit">Зарегистрироваться</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Модальное окно входа -->
-    <div id="loginModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('loginModal')">&times;</span>
-            <h2>Вход</h2>
-            <form id="loginForm">
-                <div class="form-group">
-                    <label for="loginEmail">Email</label>
-                    <input type="email" id="loginEmail" required>
-                </div>
-                <div class="form-group">
-                    <label for="loginPassword">Пароль</label>
-                    <input type="password" id="loginPassword" required>
-                </div>
-                <button type="submit" class="form-submit">Войти</button>
-            </form>
+    <div class="main-content">
+        <div class="container">
+            <h1>Добро пожаловать в Chupep</h1>
+            <p>Выберите действие в верхнем меню</p>
         </div>
     </div>
 
     <script>
-        function openModal(modalId) {
-            document.getElementById(modalId).style.display = 'flex';
-        }
-
-        function closeModal(modalId) {
-            document.getElementById(modalId).style.display = 'none';
-        }
-
-        // Закрытие модального окна при клике вне его
-        window.onclick = function(event) {
-            if (event.target.className === 'modal') {
-                event.target.style.display = 'none';
-            }
-        }
-
         // Обработка форм
         document.getElementById('registerForm').onsubmit = function(e) {
             e.preventDefault();
             // Здесь будет код для обработки регистрации
             alert('Регистрация успешна!');
-            closeModal('registerModal');
         }
 
         document.getElementById('loginForm').onsubmit = function(e) {
             e.preventDefault();
             // Здесь будет код для обработки входа
             alert('Вход выполнен!');
-            closeModal('loginModal');
         }
     </script>
 </body>
