--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chupep - Главная</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <div class="header-content">
-            <img src="logo.png" alt="Chupep Logo" class="logo">
             <div class="nav-buttons">
                 <div class="dropdown">
-                    <button class="btn btn-primary">Зарегистрироваться</button>
-                    <div class="dropdown-content">
+                    <button class="btn btn-primary" onclick="toggleDropdown('registerDropdown')">Зарегистрироваться</button>
+                    <div id="registerDropdown" class="dropdown-content">
                         <form id="registerForm">
                             <div class="form-group">
                                 <label for="regEmail">Email</label>
@@ -32,8 +31,8 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="btn btn-secondary">Войти</button>
-                    <div class="dropdown-content">
+                    <button class="btn btn-secondary" onclick="toggleDropdown('loginDropdown')">Войти</button>
+                    <div id="loginDropdown" class="dropdown-content">
                         <form id="loginForm">
                             <div class="form-group">
                                 <label for="loginEmail">Email</label>
@@ -59,16 +58,43 @@
     </div>
 
     <script>
+        function toggleDropdown(dropdownId) {
+            const dropdown = document.getElementById(dropdownId);
+            const allDropdowns = document.querySelectorAll('.dropdown-content');
+            
+            // Закрываем все выпадающие меню
+            allDropdowns.forEach(d => {
+                if (d.id !== dropdownId) {
+                    d.style.display = 'none';
+                }
+            });
+            
+            // Переключаем текущее меню
+            if (dropdown.style.display === 'block') {
+                dropdown.style.display = 'none';
+            } else {
+                dropdown.style.display = 'block';
+            }
+        }
+
+        // Закрытие выпадающего меню при клике вне его
+        window.onclick = function(event) {
+            if (!event.target.matches('.btn')) {
+                const dropdowns = document.querySelectorAll('.dropdown-content');
+                dropdowns.forEach(dropdown => {
+                    dropdown.style.display = 'none';
+                });
+            }
+        }
+
         // Обработка форм
         document.getElementById('registerForm').onsubmit = function(e) {
             e.preventDefault();
-            // Здесь будет код для обработки регистрации
             alert('Регистрация успешна!');
         }
 
         document.getElementById('loginForm').onsubmit = function(e) {
             e.preventDefault();
-            // Здесь будет код для обработки входа
             alert('Вход выполнен!');
         }
     </script>
