--- a/index.html
+++ b/index.html
@@ -10,42 +10,8 @@
     <header>
         <div class="header-content">
             <div class="nav-buttons">
-                <div class="dropdown">
-                    <button class="btn btn-primary" onclick="toggleDropdown('registerDropdown')">Зарегистрироваться</button>
-                    <div id="registerDropdown" class="dropdown-content">
-                        <form id="registerForm">
-                            <div class="form-group">
-                                <label for="regEmail">Email</label>
-                                <input type="email" id="regEmail" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="regPassword">Пароль</label>
-                                <input type="password" id="regPassword" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="regConfirmPassword">Подтвердите пароль</label>
-                                <input type="password" id="regConfirmPassword" required>
-                            </div>
-                            <button type="submit" class="form-submit">Зарегистрироваться</button>
-                        </form>
-                    </div>
-                </div>
-                <div class="dropdown">
-                    <button class="btn btn-secondary" onclick="toggleDropdown('loginDropdown')">Войти</button>
-                    <div id="loginDropdown" class="dropdown-content">
-                        <form id="loginForm">
-                            <div class="form-group">
-                                <label for="loginEmail">Email</label>
-                                <input type="email" id="loginEmail" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="loginPassword">Пароль</label>
-                                <input type="password" id="loginPassword" required>
-                            </div>
-                            <button type="submit" class="form-submit">Войти</button>
-                        </form>
-                    </div>
-                </div>
+                <button class="btn btn-primary" onclick="openModal('registerModal')">Зарегистрироваться</button>
+                <button class="btn btn-secondary" onclick="openModal('loginModal')">Войти</button>
             </div>
         </div>
     </header>
@@ -57,33 +23,54 @@
         </div>
     </div>
 
+    <!-- Модальное окно регистрации -->
+    <div id="registerModal" class="modal">
+        <div class="modal-content">
+            <form id="registerForm">
+                <div class="form-group">
+                    <label for="regEmail">Email</label>
+                    <input type="email" id="regEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="regPassword">Пароль</label>
+                    <input type="password" id="regPassword" required>
+                </div>
+                <div class="form-group">
+                    <label for="regConfirmPassword">Подтвердите пароль</label>
+                    <input type="password" id="regConfirmPassword" required>
+                </div>
+                <button type="submit" class="form-submit">Зарегистрироваться</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Модальное окно входа -->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <form id="loginForm">
+                <div class="form-group">
+                    <label for="loginEmail">Email</label>
+                    <input type="email" id="loginEmail" required>
+                </div>
+                <div class="form-group">
+                    <label for="loginPassword">Пароль</label>
+                    <input type="password" id="loginPassword" required>
+                </div>
+                <button type="submit" class="form-submit">Войти</button>
+            </form>
+        </div>
+    </div>
+
     <script>
-        function toggleDropdown(dropdownId) {
-            const dropdown = document.getElementById(dropdownId);
-            const allDropdowns = document.querySelectorAll('.dropdown-content');
-            
-            // Закрываем все выпадающие меню
-            allDropdowns.forEach(d => {
-                if (d.id !== dropdownId) {
-                    d.style.display = 'none';
-                }
-            });
-            
-            // Переключаем текущее меню
-            if (dropdown.style.display === 'block') {
-                dropdown.style.display = 'none';
-            } else {
-                dropdown.style.display = 'block';
-            }
+        function openModal(modalId) {
+            const modal = document.getElementById(modalId);
+            modal.style.display = 'block';
         }
 
-        // Закрытие выпадающего меню при клике вне его
+        // Закрытие модального окна при клике вне его
         window.onclick = function(event) {
-            if (!event.target.matches('.btn')) {
-                const dropdowns = document.querySelectorAll('.dropdown-content');
-                dropdowns.forEach(dropdown => {
-                    dropdown.style.display = 'none';
-                });
+            if (event.target.classList.contains('modal')) {
+                event.target.style.display = 'none';
             }
         }
 
@@ -91,11 +78,13 @@
         document.getElementById('registerForm').onsubmit = function(e) {
             e.preventDefault();
             alert('Регистрация успешна!');
+            document.getElementById('registerModal').style.display = 'none';
         }
 
         document.getElementById('loginForm').onsubmit = function(e) {
             e.preventDefault();
             alert('Вход выполнен!');
+            document.getElementById('loginModal').style.display = 'none';
         }
     </script>
 </body>
