--- a/index.html
+++ b/index.html
@@ -18,8 +18,19 @@
                 <button id="registerBtn">Регистрация</button>
                 <button id="loginBtn">Авторизация</button>
             </div>
+            <button id="mobileMenuBtn" class="hamburger">&#9776;</button>
         </div>
     </header>
+    <!-- Мобильное меню -->
+    <div id="mobileMenu" class="mobile-menu">
+        <nav class="mobile-menu-content">
+            <button class="mobile-menu-item">Главная</button>
+            <button class="mobile-menu-item">Продукты</button>
+            <hr>
+            <button id="registerBtnMobile" class="mobile-menu-item">Регистрация</button>
+            <button id="loginBtnMobile" class="mobile-menu-item">Авторизация</button>
+        </nav>
+    </div>
     <main>
         <!-- Основное содержимое страницы -->
     </main>
