--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
         </nav>
     </div>
     <main>
-        <!-- Основное содержимое страницы -->
+        <!-- Приветственный блок -->
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Добро пожаловать в Chupep</h1>
+                <button id="ctaProjectsBtn">Просмотреть проекты</button>
+            </div>
+        </section>
     </main>
 
     <!-- Модальное окно для регистрации -->
