--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <span class="closeBtn">&times;</span>
             <h2>Регистрация</h2>
             <form id="registrationForm">
+                <input type="text" id="regUsername" placeholder="Имя пользователя" required>
                 <input type="email" id="regEmail" placeholder="Email" required>
                 <div class="password-wrapper">
                     <input type="password" id="regPassword" placeholder="Пароль" required>
@@ -67,7 +68,7 @@
             <span class="closeBtn">&times;</span>
             <h2>Авторизация</h2>
             <form id="loginForm">
-                <input type="email" id="loginEmail" placeholder="Email" required>
+                <input type="text" id="loginUsername" placeholder="Имя пользователя" required>
                 <div class="password-wrapper">
                     <input type="password" id="loginPassword" placeholder="Пароль" required>
                     <button type="button" class="togglePassword" data-target="loginPassword">Показать</button>
