--- a/profile/index.html
+++ b/profile/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chupep</title>
-    <link rel="stylesheet" href="styles/profile_styles.css">
+    <link rel="stylesheet" href="../styles/profile_styles.css">
 </head>
 <body>
     <header>
@@ -102,5 +102,5 @@
     </main>
 </body>
 
-<script src="js/script.js"></script>
+<script src="../js/script.js"></script>
 </html>
