--- a/profile/index.html
+++ b/profile/index.html
@@ -24,19 +24,17 @@
             <div class="profile-header">
                 <div class="profile-header-user-info">
                     <label for="avatarInput" class="avatar-label">
-                    <img id="avatarImg" 
-                        src="photo_2024-03-12_13-37-16.jpg" 
-                        alt="Profile avatar">
+                        <img id="avatarImg" 
+                             src="../image/default-avatar.png" 
+                             alt="Profile avatar">
                     </label>
-                    <!-- скрытый input -->
                     <input type="file" 
-                            id="avatarInput" 
-                            accept="image/*" 
-                            style="display: none;">
-                <!-- остальной текст -->
+                           id="avatarInput" 
+                           accept="image/*" 
+                           style="display: none;">
                     <div class="profile-header-text">
-                        <h2>Username</h2>
-                        <h4>@username</h4>
+                        <h2>Загрузка...</h2>
+                        <h4>@загрузка...</h4>
                     </div>
                 </div>
                 <div class="profile-header-bar">
@@ -46,7 +44,6 @@
                     <button class="tab-btn" data-target="devices">Устройства</button>
                     <button class="tab-btn" data-target="linked-accounts">Привязанные аккаунты</button>
                     <button class="tab-btn-exit" data-target="exit">Выйти</button>
-                    
                 </div>
             </div>
             <div class="profile-main">
@@ -54,7 +51,7 @@
                     <div class="account-info">
                         <p>Настройки аккаунта</p>
                         <div class="account-info-item">
-                            <p>dadadasdasdasdsadgmail.com</p>
+                            <p>Загрузка...</p>
                             <button>Изменить</button>
                         </div>
                         <div class="password-info">
