--- a/profile/index.html
+++ b/profile/index.html
@@ -114,6 +114,6 @@
         </div>
     </div>
 
-    <script src="../js/script.js"></script>
+    <script src="../js/profile.js"></script>
 </body>
 </html>
