--- a/profile/index.html
+++ b/profile/index.html
@@ -24,11 +24,11 @@
             <div class="profile-header">
                 <div class="profile-header-top">
                     <div class="profile-header-user-info">
-                        <label for="avatarInput" class="avatar-label">
+                        <div class="avatar-container">
                             <img id="avatarImg" 
                                  src="../image/default-avatar.png" 
                                  alt="Profile avatar">
-                        </label>
+                        </div>
                         <input type="file" 
                                id="avatarInput" 
                                accept="image/*" 
